# trans-keep

./: .gitignore  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  cache.py  celery_app.py  config.py  database.py  logger.py  main.py  otel_config.py  s3.py
backend/app/middleware/: auth_middleware.py  tracing.py
backend/app/models/: __init__.py  document_block.py  glossary.py  translation.py  user.py
backend/app/routers/: __init__.py  auth.py  download.py  status.py  translation.py  upload.py
backend/app/schemas/: auth.py  download.py  pdf.py  status.py  translation.py  upload.py
backend/app/services/: alternatives_service.py  pdf_reconstruction.py  pdf_service.py  tone_service.py  translation_fallback.py  translation_service.py
backend/app/tasks/: __init__.py  customize_tone.py  extract_pdf.py  orchestrator.py  reconstruct_pdf.py  translate_blocks.py
backend/app/utils/: error_messages.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_started_at_to_translations.py
backend/tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_cache.py  test_celery.py  test_database.py  test_download.py  test_error_handling.py  test_health.py  test_logger.py  test_otel.py  test_pdf_extraction.py  test_pdf_reconstruction.py  test_s3.py  test_status.py  test_tone_service.py  test_translation.py  test_upload.py
backend/transkeep_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: EPIC-TECH-STACK-SUMMARY.md  PRD.md  (+26 more)
(+105 files in other folders)
