[project]
name = "transkeep-backend"
version = "0.1.0"
description = "TransKeep backend API - Document translation with format preservation"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic[email]==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    "celery==5.3.4",
    "redis==5.0.1",
    "aioredis==2.0.1",
    "PyMuPDF==1.23.7",
    "PyMuPDF-fonts==1.0.5",
    "boto3==1.29.7",
    "python-multipart==0.0.6",
    "httpx==0.25.2",
    "python-jose==3.3.0",
    "google-auth==2.25.2",
    "anthropic==0.7.8",
    "deepl==1.16.0",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-exporter-jaeger==1.21.0",
    "opentelemetry-instrumentation-fastapi==0.42b0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "ruff==0.1.9",
    "mypy==1.7.1",
]

